--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,24 +132,53 @@ form {
     margin: 15px auto;
 }
 
-/* Media query para telas menores 
-@media (max-width: 768px) {
-    section {
-        padding: 20px;
-    }
-    .form-group button,
-    .form-group input,
-    .form-group textarea {
-        font-size: 14px;
-    }
+/*Formatando footer*/
+
+/* Estilos para o footer */
+footer {
+    background-color: #273B09;
+    color: #DBD2E0;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 30px;
+    border-top: 3px solid #DDDDDD;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 1);
 }
-@media (max-width: 480px) {
-    section {
-        padding: 10px;
-    }
-    .form-group button,
-    .form-group input,
-    .form-group textarea {
-        font-size: 12px;
-    }
-}*/
+
+.social-media img {
+    width: 24px;
+    height: 24px;
+    filter: invert(88%) sepia(10%) saturate(0%) hue-rotate(197deg) brightness(93%) contrast(91%);
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+
+.social-media {
+    margin-bottom: 20px;
+}
+
+.social-media a {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+footer p {
+    margin: 5px 0;
+    text-align: center;
+    line-height: 1.3;
+  
+}
+
+footer a {
+    color: #7B904B;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #668A3D;
+    cursor: pointer;
+}
